tests/expectations/compiler/console/assert_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected , -- found ')'
    --> compiler-test:6:27
     |
   6 |         assert_eq(a == 1u8);
     |                           ^"""]
